--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "test/pybind11-project-example"]
 	path = test/pybind11-project-example
-	url = git@github.com:sizmailov/pybind11-project-example.git
+	url = https://github.com/sizmailov/pybind11-stubgen.git
