--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,7 @@ repos:
         stages: [ commit ]
       - id: flake8
         name: flake8
-        exclude: ^(tests|examples)/
+        exclude: ^(tests)/
         language: system
         entry: flake8
         args:
