--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,5 @@
-black==23.7.0
-flake8==6.1.0
-isort==5.12.0
-numpy==1.25.2
+black==22.8.0
+flake8~=6.1.0
+isort==5.10.1
+numpy~=1.20
 typing_extensions==4.7.1
