--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,18 +12,13 @@ jobs:
     name: Build distributions
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        python:
-            - 3.8
-
     steps:
       - uses: actions/checkout@v2
 
       - name: Setup Python ${{ matrix.python }}
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python }}
+          python-version: "3.10"
 
       - name: Build dist
         run: pipx run build --sdist --wheel
