ci: Add more python version starting from 3.6

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,27 +52,18 @@ jobs:
           - runs-on: "ubuntu-latest"
             python: "3.10"
             pybind11-branch: "master"
-#          - runs-on: "ubuntu-latest"
-#            python: "3.9"
-#            pybind11-branch: "master"
-#          - runs-on: "ubuntu-latest"
-#            python: "3.8"
-#            pybind11-branch: "master"
-#          - runs-on: "ubuntu-latest"
-#            python: "3.7"
-#            pybind11-branch: "master"
-#          - runs-on: "ubuntu-latest"
-#            python: "3.6"
-#            pybind11-branch: "master"
-#          - runs-on: "ubuntu-latest"
-#            python: "3.5"
-#            pybind11-branch: "master"
-#          - runs-on: "ubuntu-latest"
-#            python: "3.4"
-#            pybind11-branch: "master"
-#          - runs-on: "ubuntu-latest"
-#            python: "3.3"
-#            pybind11-branch: "master"
+          - runs-on: "ubuntu-latest"
+            python: "3.9"
+            pybind11-branch: "master"
+          - runs-on: "ubuntu-latest"
+            python: "3.8"
+            pybind11-branch: "master"
+          - runs-on: "ubuntu-latest"
+            python: "3.7"
+            pybind11-branch: "master"
+          - runs-on: "ubuntu-latest"
+            python: "3.6"
+            pybind11-branch: "master"
     steps:
       - uses: actions/checkout@v3
 
