--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,7 @@ jobs:
         run: python -m pip install pytest-github-actions-annotate-failures
 
       - name: Install requirements
-        run: pip install -r requirements-dev.txt
+        run: pip install -r "stubs/python-${{ matrix.python }}/requirements.txt"
 
       - name: Install pybind11-stubgen
         run: pip install .
