--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,22 +46,22 @@ jobs:
 #          - runs-on: "windows-2022"
 #            python: "3.11"
 #            pybind11-branch: "master"
-          - runs-on: "ubuntu-latest"
-            python: "3.11"
-            pybind11-branch: "master"
-          - runs-on: "ubuntu-latest"
-            python: "3.10"
-            pybind11-branch: "master"
-          - runs-on: "ubuntu-latest"
-            python: "3.9"
-            pybind11-branch: "master"
-          - runs-on: "ubuntu-latest"
-            python: "3.8"
-            pybind11-branch: "master"
-          - runs-on: "ubuntu-latest"
-            python: "3.7"
-            pybind11-branch: "master"
-          - runs-on: "ubuntu-latest"
+#          - runs-on: "ubuntu-latest"
+#            python: "3.11"
+#            pybind11-branch: "master"
+#          - runs-on: "ubuntu-latest"
+#            python: "3.10"
+#            pybind11-branch: "master"
+#          - runs-on: "ubuntu-latest"
+#            python: "3.9"
+#            pybind11-branch: "master"
+#          - runs-on: "ubuntu-latest"
+#            python: "3.8"
+#            pybind11-branch: "master"
+#          - runs-on: "ubuntu-latest"
+#            python: "3.7"
+#            pybind11-branch: "master"
+          - runs-on: "ubuntu-20.04"
             python: "3.6"
             pybind11-branch: "master"
     steps:
