--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,26 +43,23 @@ jobs:
       fail-fast: false
       matrix:
         include:
-#          - runs-on: "windows-2022"
-#            python: "3.11"
-#            pybind11-branch: "master"
-#          - runs-on: "ubuntu-latest"
-#            python: "3.11"
-#            pybind11-branch: "master"
-#          - runs-on: "ubuntu-latest"
-#            python: "3.10"
-#            pybind11-branch: "master"
-#          - runs-on: "ubuntu-latest"
-#            python: "3.9"
-#            pybind11-branch: "master"
-#          - runs-on: "ubuntu-latest"
-#            python: "3.8"
-#            pybind11-branch: "master"
-#          - runs-on: "ubuntu-latest"
-#            python: "3.7"
-#            pybind11-branch: "master"
-          - runs-on: "ubuntu-20.04"
-            python: "3.6"
+          - runs-on: "windows-2022"
+            python: "3.11"
+            pybind11-branch: "master"
+          - runs-on: "ubuntu-latest"
+            python: "3.11"
+            pybind11-branch: "master"
+          - runs-on: "ubuntu-latest"
+            python: "3.10"
+            pybind11-branch: "master"
+          - runs-on: "ubuntu-latest"
+            python: "3.9"
+            pybind11-branch: "master"
+          - runs-on: "ubuntu-latest"
+            python: "3.8"
+            pybind11-branch: "master"
+          - runs-on: "ubuntu-latest"
+            python: "3.7"
             pybind11-branch: "master"
     steps:
       - uses: actions/checkout@v3
