ci: Remove windows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,12 +37,11 @@ jobs:
         if: ${{ failure() ||  success() }}
 
   tests:
-    name: "🐍 ${{ matrix.python }} • ${{ matrix.runs-on }} • pybind-${{ matrix.pybind11-branch }}"
-    runs-on: ${{ matrix.runs-on }}
+    name: "🐍 ${{ matrix.python }} • pybind-${{ matrix.pybind11-branch }}"
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        runs-on: [ "ubuntu-latest" ]
         pybind11-branch: [ "master" ]
         python:
           - "3.11"
@@ -50,10 +49,6 @@ jobs:
           - "3.9"
           - "3.8"
           - "3.7"
-        include:
-          - runs-on: "windows-2022"
-            pybind11-branch: "master"
-            python: "3.11"
     steps:
       - uses: actions/checkout@v3
 
