--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10.6'
+          python-version: '3.11'
       - name: Checkout
         uses: actions/checkout@v3
       - name: Install requirements
@@ -36,20 +36,18 @@ jobs:
         if: ${{ failure() ||  success() }}
 
   tests:
-    name: "🐍 ${{ matrix.python }} • ${{ matrix.runs-on }}"
-    runs-on: ${{ matrix.runs-on }}
+    name: "🐍 ${{ matrix.python }} • pybind-${{ matrix.pybind11-branch }}"
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        runs-on: [ ubuntu-latest ]
+        pybind11-branch: [ "master" ]
         python:
           - "3.11"
           - "3.10"
           - "3.9"
-        # - "3.8" #  `typing.Annotated` not available
-        include:
-          - runs-on: "windows-2022"
-            python: "3.10"
+          - "3.8"
+          - "3.7"
     steps:
       - uses: actions/checkout@v3
 
@@ -66,10 +64,14 @@ jobs:
         run: python -m pip install pytest-github-actions-annotate-failures
 
       - name: Install requirements
-        run: pip install -r requirements-dev.txt
+        run: pip install -r "./tests/stubs/python-${{ matrix.python }}/requirements.txt"
 
       - name: Install pybind11-stubgen
         run: pip install .
 
       - name: Run tests
-        run: ./tests/run-tests.sh
+        shell: bash
+        run: >
+          ./tests/run-tests.sh \
+            --pybind11-branch "${{ matrix.pybind11-branch }}" \
+            --stubs-sub-dir   "stubs/python-${{ matrix.python }}/pybind11-${{ matrix.pybind11-branch }}" \
