--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,9 @@ jobs:
                     path: "./tests/stubs/python-${{ matrix.python }}/pybind11-${{ matrix.pybind11-branch }}.patch"
                     retention-days: 30
                     if-no-files-found: ignore
+
             -  name: Check error generation
+               if: ${{ !contains(fromJson('["3.7", "3.8"]'), matrix.python) }}
                shell: bash
                run: ./tests/check-demo-errors-generation.sh
 
