ci: Test against pybind11-v2.9

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,9 @@ jobs:
                     - "3.9"
                     - "3.8"
                     - "3.7"
+                include:
+                    - pybind11-branch: "2.9"
+                      python: "3.12"
         steps:
             -   uses: actions/checkout@v3
 
