--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,9 +78,7 @@ jobs:
 
             -   name: Install demo module
                 shell: bash
-                run: ./tests/install-demo-module.sh \
-                        --pybind11-branch "${{ matrix.pybind11-branch }}" \
-                        --eigen-branch "master"
+                run: ./tests/install-demo-module.sh --pybind11-branch "${{ matrix.pybind11-branch }}" --eigen-branch "master"
 
             -   name: Check stubs generation
                 shell: bash
