--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,8 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                pybind11-branch: [ "master" ]
+                pybind11-branch:
+                    - "master"
                 python:
                     - "3.12"
                     - "3.11"
@@ -51,6 +52,9 @@ jobs:
                     - "3.9"
                     - "3.8"
                     - "3.7"
+                include:
+                    - pybind11-branch: "v2.9"
+                      python: "3.12"
         steps:
             -   uses: actions/checkout@v3
 
@@ -74,7 +78,7 @@ jobs:
 
             -   name: Install demo module
                 shell: bash
-                run: ./tests/install-demo-module.sh --pybind11-branch "${{ matrix.pybind11-branch }}"
+                run: ./tests/install-demo-module.sh --pybind11-branch "${{ matrix.pybind11-branch }}" --eigen-branch "master"
 
             -   name: Check stubs generation
                 shell: bash
