ci: Add pybind11-v2.11 to test matrix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,8 @@ jobs:
                 include:
                     - pybind11-branch: "v2.9"
                       python: "3.12"
+                    - pybind11-branch: "v2.11"
+                      python: "3.12"
         steps:
             -   uses: actions/checkout@v3
 
