--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,11 +52,18 @@ jobs:
                     - "3.9"
                     - "3.8"
                     - "3.7"
+                numpy-format:
+                    - "numpy-array-wrap-with-annotated"
                 include:
-                    - pybind11-branch: "v2.9"
-                      python: "3.12"
-                    - pybind11-branch: "v2.11"
-                      python: "3.12"
+                    - python: "3.12"
+                      pybind11-branch: "v2.9"
+                      numpy-format: "numpy-array-wrap-with-annotated"
+                    - python: "3.12"
+                      pybind11-branch: "v2.11"
+                      numpy-format: "numpy-array-wrap-with-annotated"
+                    - python: "3.12"
+                      pybind11-branch: "master"
+                      numpy-format: "numpy-array-use-type-var"
         steps:
             -   uses: actions/checkout@v3
 
@@ -84,7 +91,7 @@ jobs:
 
             -   name: Check stubs generation
                 shell: bash
-                run: ./tests/check-demo-stubs-generation.sh --stubs-sub-dir "stubs/python-${{ matrix.python }}/pybind11-${{ matrix.pybind11-branch }}"
+                run: ./tests/check-demo-stubs-generation.sh --stubs-sub-dir "stubs/python-${{ matrix.python }}/pybind11-${{ matrix.pybind11-branch }}/${{ matrix.numpy-format }} --${{ matrix.numpy-format }}"
 
             -   name: Archive patch
                 uses: actions/upload-artifact@v3
@@ -137,6 +144,7 @@ jobs:
                     pybind11-stubgen "${{ matrix.test-package }}" -o flavour-1 --numpy-array-wrap-with-annotated
                     pybind11-stubgen "${{ matrix.test-package }}" -o flavour-2 --numpy-array-remove-parameters
                     pybind11-stubgen "${{ matrix.test-package }}" -o flavour-3 --print-invalid-expressions-as-is
+                    pybind11-stubgen "${{ matrix.test-package }}" -o flavour-4 --numpy-array-use-type-var
                     pybind11-stubgen "${{ matrix.test-package }}" --dry-run
 
     publish:
