chore: 🙈 ignore .vscode/ folder

--- a/.gitignore
+++ b/.gitignore
@@ -207,6 +207,8 @@ cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/c++,cmake,python
 
+# VS Code
+.vscode/
 
 tmp
 *.patch
