CI: Unbreak Eigen
Eigen 3.3+ changed their internal BLAS build logic, which will
need a deeper look why it does not work. Just setting the flag to
build BLAS is overwritten by other logic with the Fortran compiler,
which breaks current CI.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,7 @@ jobs:
 
             -   name: Install demo module
                 shell: bash
-                run: ./tests/install-demo-module.sh --pybind11-branch "${{ matrix.pybind11-branch }}" --eigen-branch "master"
+                run: ./tests/install-demo-module.sh --pybind11-branch "${{ matrix.pybind11-branch }}" --eigen-branch "3.2.10"
 
             -   name: Check stubs generation
                 shell: bash
