--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,16 +9,22 @@ on:
         tags:
             - 'v*'
 
+env:
+    # Latest pybind11 stable release branch
+    LATEST_PYBIND11: "v2.13"
+    # Latest released python
+    LATEST_PYTHON: "v3.13"
+
 jobs:
 
     format:
         name: Format code
         runs-on: ubuntu-latest
         steps:
-            -   name: Setup Python
+            -   name: Setup Python ${{ env.LATEST_PYTHON }}
                 uses: actions/setup-python@v5
                 with:
-                    python-version: '3.13'
+                    python-version: ${{ env.LATEST_PYTHON }}
             -   name: Checkout
                 uses: actions/checkout@v4
             -   name: Install requirements
@@ -44,7 +50,7 @@ jobs:
             fail-fast: false
             matrix:
                 pybind11-branch:
-                    - "master"
+                    - ${{ env.LATEST_PYBIND11 }}
                 python:
                     - "3.13"
                     - "3.12"
@@ -55,15 +61,21 @@ jobs:
                 numpy-format:
                     - "numpy-array-wrap-with-annotated"
                 include:
-                    - python: "3.12"
+                    - python: ${{ env.LATEST_PYTHON }}
                       pybind11-branch: "v2.9"
                       numpy-format: "numpy-array-wrap-with-annotated"
-                    - python: "3.12"
+                    - python: ${{ env.LATEST_PYTHON }}
                       pybind11-branch: "v2.11"
                       numpy-format: "numpy-array-wrap-with-annotated"
-                    - python: "3.12"
-                      pybind11-branch: "master"
+                    - python: ${{ env.LATEST_PYTHON }}
+                      pybind11-branch: "v2.12"
+                      numpy-format: "numpy-array-wrap-with-annotated"
+                    - python: ${{ env.LATEST_PYTHON }}
+                      pybind11-branch: ${{ env.LATEST_PYBIND11 }}
                       numpy-format: "numpy-array-use-type-var"
+#                    # TODO: uncomment
+#                    - python: ${{ env.LATEST_PYTHON }}
+#                      pybind11-branch: "master"
         steps:
             -   uses: actions/checkout@v4
 
@@ -157,10 +169,10 @@ jobs:
         steps:
             -   uses: actions/checkout@v4
 
-            -   name: Setup Python ${{ matrix.python }}
+            -   name: Setup Python ${{ env.LATEST_PYTHON }}
                 uses: actions/setup-python@v2
                 with:
-                    python-version: "3.13"
+                    python-version: ${{ env.LATEST_PYTHON }}
 
             -   name: Build dist
                 run: pipx run build --sdist --wheel
