--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
             fail-fast: false
             matrix:
                 pybind11-branch:
-                    - ${{ env.LATEST_PYBIND11 }}
+                    - "${{ env.LATEST_PYBIND11 }}"
                 python:
                     - "3.13"
                     - "3.12"
